calculating needed VRAM

--- a/notebooks/02032026_preliminary_experiment_qzhou.ipynb
+++ b/notebooks/02032026_preliminary_experiment_qzhou.ipynb
@@ -433,6 +433,296 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "5ed3c65e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/dwright/miniforge3/envs/belief_model/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "MEMORY REQUIREMENTS ANALYSIS\n",
+      "======================================================================\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "\n",
+      "======================================================================\n",
+      "MEMORY ESTIMATES (in GB)\n",
+      "======================================================================\n",
+      "Context    FP32 Total      FP16 Total      Weights         Attention      \n",
+      "----------------------------------------------------------------------\n",
+      "512        23.79           12.22           23.14           0.03           \n",
+      "1024       24.49           12.92           23.14           0.12           \n",
+      "2048       26.08           14.51           23.14           0.47           \n",
+      "4096       29.96           18.38           23.14           1.88           \n",
+      "8192       40.53           28.95           23.14           7.52           \n",
+      "\n",
+      "======================================================================\n",
+      "DETAILED BREAKDOWN (Context Length = 8192, Batch Size = 1)\n",
+      "======================================================================\n",
+      "Model Weights (FP32):        23.14 GB\n",
+      "Model Weights (FP16):        11.57 GB\n",
+      "Activation Memory:            3.29 GB\n",
+      "Attention Scores:             7.52 GB\n",
+      "KV Cache:                     6.58 GB\n",
+      "----------------------------------------\n",
+      "TOTAL (FP32):                40.53 GB\n",
+      "TOTAL (FP16):                28.95 GB\n",
+      "\n",
+      "======================================================================\n",
+      "YOUR GPU MEMORY: 12.43 GB\n",
+      "======================================================================\n",
+      "Context   512: Fits in GPU? FP32: ✗ NO     | FP16: ✓ YES   \n",
+      "Context  1024: Fits in GPU? FP32: ✗ NO     | FP16: ✗ NO    \n",
+      "Context  2048: Fits in GPU? FP32: ✗ NO     | FP16: ✗ NO    \n",
+      "Context  4096: Fits in GPU? FP32: ✗ NO     | FP16: ✗ NO    \n",
+      "Context  8192: Fits in GPU? FP32: ✗ NO     | FP16: ✗ NO    \n",
+      "\n",
+      "Conclusion:\n",
+      "- 8192 context length is NOT feasible on RTX 4070 Ti (even with FP16)\n",
+      "- 2048 context length is borderline on RTX 4070 Ti\n",
+      "- 512-1024 context length is safe for stable operation\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate memory requirements for embedding model with different context lengths\n",
+    "# WITHOUT loading the model into memory\n",
+    "\n",
+    "from transformers import AutoConfig\n",
+    "import json\n",
+    "\n",
+    "def estimate_embedding_model_memory(model_name: str, context_length: int, batch_size: int = 1) -> dict:\n",
+    "    \"\"\"\n",
+    "    Estimate GPU memory needed for embedding model inference.\n",
+    "    \n",
+    "    Args:\n",
+    "        model_name: HuggingFace model name\n",
+    "        context_length: Max sequence length (tokens)\n",
+    "        batch_size: Batch size for inference\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary with memory estimates (in GB)\n",
+    "    \"\"\"\n",
+    "    # Load only config, not weights\n",
+    "    print(f\"Loading model config from {model_name}...\")\n",
+    "    config = AutoConfig.from_pretrained(model_name, trust_remote_code=True)\n",
+    "    \n",
+    "    # Extract model dimensions\n",
+    "    hidden_size = config.hidden_size\n",
+    "    num_hidden_layers = config.num_hidden_layers\n",
+    "    num_attention_heads = config.num_attention_heads\n",
+    "    intermediate_size = config.intermediate_size\n",
+    "    vocab_size = config.vocab_size\n",
+    "    \n",
+    "    print(f\"\\nModel Architecture:\")\n",
+    "    print(f\"  Hidden size: {hidden_size}\")\n",
+    "    print(f\"  Layers: {num_hidden_layers}\")\n",
+    "    print(f\"  Attention heads: {num_attention_heads}\")\n",
+    "    print(f\"  Intermediate size: {intermediate_size}\")\n",
+    "    \n",
+    "    # Calculate number of parameters\n",
+    "    # Simplified calculation - actual model may have more (LayerNorms, biases, etc.)\n",
+    "    params_per_layer = (\n",
+    "        hidden_size * intermediate_size * 2 +  # MLP weights\n",
+    "        hidden_size * hidden_size * 4           # Attention weights (Q, K, V, O)\n",
+    "    )\n",
+    "    total_params = vocab_size * hidden_size + params_per_layer * num_hidden_layers + hidden_size * num_hidden_layers * 3\n",
+    "    \n",
+    "    bytes_per_param_fp32 = 4\n",
+    "    bytes_per_param_fp16 = 2\n",
+    "    \n",
+    "    # Memory for model weights\n",
+    "    model_mem_fp32 = total_params * bytes_per_param_fp32 / 1e9  # GB\n",
+    "    model_mem_fp16 = total_params * bytes_per_param_fp16 / 1e9  # GB\n",
+    "    \n",
+    "    # Memory for activations during forward pass\n",
+    "    # Approximate: batch_size * seq_len * hidden_size * num_layers * 4 bytes\n",
+    "    activation_mem = (batch_size * context_length * hidden_size * num_hidden_layers * bytes_per_param_fp32) / 1e9\n",
+    "    \n",
+    "    # Memory for attention scores (seq_len x seq_len per head)\n",
+    "    # attention_mem ≈ batch_size * num_attention_heads * seq_len * seq_len * bytes_per_param\n",
+    "    attention_mem = (batch_size * num_attention_heads * context_length * context_length * bytes_per_param_fp32) / 1e9\n",
+    "    \n",
+    "    # KV cache for autoregressive generation (if applicable)\n",
+    "    # kv_cache ≈ 2 * batch_size * num_layers * seq_len * hidden_size / num_heads * bytes_per_param\n",
+    "    kv_cache_mem = (2 * batch_size * num_hidden_layers * context_length * hidden_size * bytes_per_param_fp32) / 1e9\n",
+    "    \n",
+    "    # Total estimates\n",
+    "    total_fp32 = model_mem_fp32 + activation_mem + attention_mem + kv_cache_mem\n",
+    "    total_fp16 = model_mem_fp16 + activation_mem + attention_mem + kv_cache_mem\n",
+    "    \n",
+    "    return {\n",
+    "        \"context_length\": context_length,\n",
+    "        \"batch_size\": batch_size,\n",
+    "        \"model_params\": total_params,\n",
+    "        \"model_weights_fp32_gb\": model_mem_fp32,\n",
+    "        \"model_weights_fp16_gb\": model_mem_fp16,\n",
+    "        \"activation_memory_gb\": activation_mem,\n",
+    "        \"attention_scores_memory_gb\": attention_mem,\n",
+    "        \"kv_cache_memory_gb\": kv_cache_mem,\n",
+    "        \"total_memory_fp32_gb\": total_fp32,\n",
+    "        \"total_memory_fp16_gb\": total_fp16,\n",
+    "    }\n",
+    "\n",
+    "# Calculate for different context lengths\n",
+    "model_name = \"Kingsoft-LLM/QZhou-Embedding\"\n",
+    "batch_size = 1\n",
+    "\n",
+    "print(\"=\" * 70)\n",
+    "print(\"MEMORY REQUIREMENTS ANALYSIS\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "results = {}\n",
+    "for ctx_len in [512, 1024, 2048, 4096, 8192]:\n",
+    "    results[ctx_len] = estimate_embedding_model_memory(model_name, ctx_len, batch_size)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"MEMORY ESTIMATES (in GB)\")\n",
+    "print(\"=\" * 70)\n",
+    "print(f\"{'Context':<10} {'FP32 Total':<15} {'FP16 Total':<15} {'Weights':<15} {'Attention':<15}\")\n",
+    "print(\"-\" * 70)\n",
+    "\n",
+    "for ctx_len in sorted(results.keys()):\n",
+    "    r = results[ctx_len]\n",
+    "    print(f\"{ctx_len:<10} {r['total_memory_fp32_gb']:<15.2f} {r['total_memory_fp16_gb']:<15.2f} \"\n",
+    "          f\"{r['model_weights_fp32_gb']:<15.2f} {r['attention_scores_memory_gb']:<15.2f}\")\n",
+    "\n",
+    "# Detailed breakdown for 8192 context\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(\"DETAILED BREAKDOWN (Context Length = 8192, Batch Size = 1)\")\n",
+    "print(\"=\" * 70)\n",
+    "r = results[8192]\n",
+    "print(f\"Model Weights (FP32):     {r['model_weights_fp32_gb']:>8.2f} GB\")\n",
+    "print(f\"Model Weights (FP16):     {r['model_weights_fp16_gb']:>8.2f} GB\")\n",
+    "print(f\"Activation Memory:        {r['activation_memory_gb']:>8.2f} GB\")\n",
+    "print(f\"Attention Scores:         {r['attention_scores_memory_gb']:>8.2f} GB\")\n",
+    "print(f\"KV Cache:                 {r['kv_cache_memory_gb']:>8.2f} GB\")\n",
+    "print(\"-\" * 40)\n",
+    "print(f\"TOTAL (FP32):             {r['total_memory_fp32_gb']:>8.2f} GB\")\n",
+    "print(f\"TOTAL (FP16):             {r['total_memory_fp16_gb']:>8.2f} GB\")\n",
+    "\n",
+    "# Your GPU specs\n",
+    "gpu_memory_gb = 12.43\n",
+    "print(\"\\n\" + \"=\" * 70)\n",
+    "print(f\"YOUR GPU MEMORY: {gpu_memory_gb:.2f} GB\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "for ctx_len in sorted(results.keys()):\n",
+    "    r = results[ctx_len]\n",
+    "    fits_fp32 = \"✓ YES\" if r['total_memory_fp32_gb'] < gpu_memory_gb else \"✗ NO\"\n",
+    "    fits_fp16 = \"✓ YES\" if r['total_memory_fp16_gb'] < gpu_memory_gb else \"✗ NO\"\n",
+    "    print(f\"Context {ctx_len:>5}: Fits in GPU? FP32: {fits_fp32:<8} | FP16: {fits_fp16:<8}\")\n",
+    "\n",
+    "print(\"\\nConclusion:\")\n",
+    "print(\"- 8192 context length is NOT feasible on RTX 4070 Ti (even with FP16)\")\n",
+    "print(\"- 2048 context length is borderline on RTX 4070 Ti\")\n",
+    "print(\"- 512-1024 context length is safe for stable operation\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b6d7ff2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "MEMORY REQUIREMENT: Batch Size = 3, Context Length = 8192\n",
+      "======================================================================\n",
+      "Loading model config from Kingsoft-LLM/QZhou-Embedding...\n",
+      "\n",
+      "Model Architecture:\n",
+      "  Hidden size: 3584\n",
+      "  Layers: 28\n",
+      "  Attention heads: 28\n",
+      "  Intermediate size: 18944\n",
+      "\n",
+      "Model Weights (FP32):        23.14 GB\n",
+      "Model Weights (FP16):        11.57 GB\n",
+      "Activation Memory:            9.87 GB\n",
+      "Attention Scores:            22.55 GB\n",
+      "KV Cache:                    19.73 GB\n",
+      "----------------------------------------\n",
+      "TOTAL (FP32):                75.29 GB\n",
+      "TOTAL (FP16):                63.72 GB\n",
+      "\n",
+      "📊 Your GPU has 12.43 GB\n",
+      "   FP32: ✗ NOT FEASIBLE\n",
+      "   FP16: ✗ NOT FEASIBLE\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check memory requirements for batch_size=4 with context_length=8192\n",
+    "print(\"=\" * 70)\n",
+    "print(\"MEMORY REQUIREMENT: Batch Size = 3, Context Length = 8192\")\n",
+    "print(\"=\" * 70)\n",
+    "\n",
+    "result = estimate_embedding_model_memory(model_name, context_length=8192, batch_size=3)\n",
+    "\n",
+    "print(f\"\\nModel Weights (FP32):     {result['model_weights_fp32_gb']:>8.2f} GB\")\n",
+    "print(f\"Model Weights (FP16):     {result['model_weights_fp16_gb']:>8.2f} GB\")\n",
+    "print(f\"Activation Memory:        {result['activation_memory_gb']:>8.2f} GB\")\n",
+    "print(f\"Attention Scores:         {result['attention_scores_memory_gb']:>8.2f} GB\")\n",
+    "print(f\"KV Cache:                 {result['kv_cache_memory_gb']:>8.2f} GB\")\n",
+    "print(\"-\" * 40)\n",
+    "print(f\"TOTAL (FP32):             {result['total_memory_fp32_gb']:>8.2f} GB\")\n",
+    "print(f\"TOTAL (FP16):             {result['total_memory_fp16_gb']:>8.2f} GB\")\n",
+    "\n",
+    "print(f\"\\n📊 Your GPU has 12.43 GB\")\n",
+    "print(f\"   FP32: {'✗ NOT FEASIBLE' if result['total_memory_fp32_gb'] > 12.43 else '✓ FEASIBLE'}\")\n",
+    "print(f\"   FP16: {'✗ NOT FEASIBLE' if result['total_memory_fp16_gb'] > 12.43 else '✓ FEASIBLE'}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "80c69dbb",
    "metadata": {},
